Added initial migration

--- a/UserService.Api/appsettings.Development.json
+++ b/UserService.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=user-service-api;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=user_service_db;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "Test" : "sa"
 }
